--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main>
         <button id="btnDatos" class="btn-datos">Obtener datos</button>
         <section id="infoUsuario" class="info-usuarios">
+            <p id="infoParrafo"></p>
             <!-- <div>
                 <ul>
                     <li>Nombre: </li>
